fixed white space

--- a/curry/css/mainvis.css
+++ b/curry/css/mainvis.css
@@ -44,6 +44,10 @@
     width: 100%;
 }
 
+#last_element {
+    position: absolute;
+    width: 100%;
+}
 
 html,
 body {
